# banditAnalysis

./: .gitignore  ParameterSearch.ipynb  README.md  batfile.bat  blockChanges.ipynb  environment.yml  excelBanditData.ipynb  exploringBandits.ipynb  fish.txt  gpFitting.ipynb  gpFittingFunctions.py  gpPackageTesting.ipynb  gpSim.ipynb  gp_result.pickle  gp_ucb_bandit_replicate.ipynb  gpflowtesting.py  hmmLearn.ipynb  kFoldCVRegression.ipynb  mab.py  multiAnimalAnalysis.ipynb  nullModelGen.py  opconDailyChecker.py  pgfittingFunctions.py  policyGradientSim.ipynb  predictiveModelling.ipynb  probFunctions.ipynb  propensityScoreMatching.ipynb  pyproject.toml  random.ipynb  recordAV-v2.py  recovery.ipynb  regression20241117.ipynb  regression20241117.py  regressionAnalysis.ipynb  rodentBanditAnalysis.ipynb  sessdfGenerator_daily.py  setup.cfg  sim_logreg_20250320.ipynb  spikeAnalysis.ipynb  spikeAnalysisOpCon.ipynb  (+2 more)
.ipynb_checkpoints/: banditTestbed-checkpoint.ipynb  cameraMerger-checkpoint.py  exploringBandits-checkpoint.ipynb  gpFitting-checkpoint.ipynb  gp_bandit-checkpoint.ipynb  gp_ucb_bandit_replicate-checkpoint.ipynb  kFoldCVRegression-checkpoint.ipynb  master-sessdf-gen-checkpoint.ipynb  multiAnimalAnalysis-checkpoint.ipynb  nullModelComparison-checkpoint.ipynb  opconNosepokeFunctions-checkpoint.py  pastaTaskData-checkpoint.ipynb  probFunctions-checkpoint.ipynb  propensityScoreMatching-checkpoint.ipynb  qlearnOptimization-checkpoint.ipynb  qlfittingFunctions-checkpoint.py  random-checkpoint.ipynb  regression20241117-checkpoint.ipynb  regressionAnalysis-checkpoint.ipynb  (+10 more)
(+64 files in other folders)
